# disposable

./: .generate  .gitignore  .npmignore  CHANGELOG  LICENSE  Makefile  README.md  banlist  blacklist.txt  disposable.go  disposable.js  disposable.py  domains.go  domains.json  domains.txt  domains_sha1.json  domains_sha1.txt  domains_strict.json  domains_strict.txt  generate.go  greylist.txt  ignorelist  mailservices.json  package.json  pyproject.toml  readme.md  requirements.txt  update.sh  verify_crawlers.py  whitelist.txt
.generate/: generate.go
.github/ISSUE_TEMPLATE/: false-positive-report.yml  non-disposable-domain-listed.md
.github/workflows/: build-test-image.yml  generate-lists.yml  test-sources.yml  validate-commit.yml  validate-false-positive.yml
docker/: Dockerfile
docker/assets/: apt_nocache  dpkg_nodoc  unbound-listener.conf
generate/: generate.go
src/disposablehosts/: __init__.py  __main__.py  cli.py  constants.py  generator.py  remote_data.py
src/disposablehosts/preprocessing/: __init__.py  file.py  html.py  json.py  registry.py  sha1.py  websocket.py
src/disposablehosts/sources/: __init__.py  file.py  http.py  websocket.py
src/disposablehosts/utils/: __init__.py  dns.py
test/: disposable.js
tests/: __init__.py
tests/integration/: __init__.py  test_cli.py  test_sources.py
tests/unit/: __init__.py  test_cli.py  test_constants.py  test_dns.py  test_generator.py  test_generator_basics.py  test_generator_core.py  test_generator_extended.py  test_generator_more.py  test_generator_mx.py  test_generator_output.py  test_generator_processing.py  test_generator_sources.py  test_init.py  test_preprocessing.py  test_preprocessing_extended.py  test_preprocessing_file.py  test_preprocessing_html.py  test_preprocessing_json.py  test_preprocessing_registry.py  test_preprocessing_sha1.py  test_remote_data.py  test_remote_data_extended.py  test_remote_data_file.py  test_remote_data_http.py  test_remote_data_websocket.py  test_sources.py  test_websocket.py
tools/: mailservice-editor.py  validate_false_positive.py  verify_data.py
