[tool.poetry]
name = "disposable"
version = "0.3"
description = "Generate a list of disposable email domains"
authors = ["Stefan Meinecke"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
dnspython3 = "^1.15.0"
idna = "^3.3"
urllib3 = "^1.26.9"
websocket-client = "0.59.0"
tldextract = "2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
