[project]
name = "disposable"
version = "0.3"
description = "Generate a list of disposable email domains"
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = { text = "MIT" }
authors = [{ name = "Stefan Meinecke" }]

dependencies = [
  "dnspython>=2.6.1,<3.0.0",
  "idna>=3.3,<4.0.0",
  "urllib3>=2.5.0,<3.0.0",
  "websocket-client==0.59.0",
  "tldextract==2.2.3",
  "httpx[http2]>=0.24.1,<0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
